# arm-device-app

./: .gitignore  CMakeLists.txt  readme.adoc
site/: 00_arc42.adoc  01_introduction_and_goals.adoc  02_architecture_constraints.adoc  03_system_scope_and_context.adoc  04_solution_strategy.adoc  05_building_block_view.adoc  06_runtime_view.adoc  07_deployment_view.adoc  08_concepts.adoc  09_architecture_decisions.adoc  10_quality_requirements.adoc  11_technical_risks.adoc  12_glossary.adoc  config.adoc
src/: main.cpp
src/doctest/: doctest.h
src/sal-cmsis/inc/: BlinkingLed.h  GPIO.h  Led.h  Messages.h  Motor.h  PWM.h  PressureSensor.h  TimerMgrSal.h  Valve.h  ValveOnOff.h
src/vinci-cmsis-simulation/inc/: Hardware.h  Simulator.h  cmsis_os2.h
src/vinci-cmsis/inc/: ActorCmsis.h  ConcurrentQueueCmsis.h  MsgPoolCmsis.h
src/vinci-cpp/inc/: ActorCpp.h  ConcurrentQueueCpp.h  MsgPoolCpp.h
src/vinci-tests/: VinciTests.cpp
src/vinci/inc/: Actor.h  ConcurrentQueue.h  Message.h  MessagePool.h  TimerMgr.h
